--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp build",
-    "dev": "gulp watching"
+    "dev": "gulp watching",
+    "build": "gulp build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "5.2.3",
+    "bootstrap": "^5.2.3",
     "gulp": "4.0.2",
     "gulp-babel": "8.0.0",
-    "gulp-uglify": "3.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "5.1.0",
+    "gulp-uglify": "3.0.2",
     "sass": "1.53.0"
   }
 }
